fixed scroll padding + (uneven padding)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,8 @@
   }
 }
 
+html { scroll-padding-top: 80px; }
+
 body {
   background: var(--background);
   color: var(--foreground);
